--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="section">
       <div class="section__container">
         <div class="content">
-          <p class="subtitle">HELLO</p>
+          <p class="subtitle">HELLO I'm</p>
           <h1 class="title">
             Aytijhya Saha
           </h1>
@@ -46,6 +46,22 @@
         <div class="image">
           <img src="image.png" alt="profile" />
         </div>
+      </div>
+      <div class="papers">
+        <h2>List of Papers</h2>
+        <div class="paper">
+          <h3>Title: Paper Title 1</h3>
+          <p>Authors: Author 1, Author 2, Aytijhya Saha</p>
+          <p>Journal: Journal Name, Year: 2024</p>
+          <p>Links: <a href="https://arxiv.org/abs/example1" target="_blank">arXiv</a></p>
+        </div>
+        <div class="paper">
+          <h3>Title: Paper Title 2</h3>
+          <p>Authors: Author 1, Author 2, Aytijhya Saha</p>
+          <p>Journal: Journal Name, Year: 2023</p>
+          <p>Links: <a href="https://arxiv.org/abs/example2" target="_blank">arXiv</a></p>
+        </div>
+        <!-- Add more papers as needed -->
       </div>
     </section>
   </body>
