--- a/index.html
+++ b/index.html
@@ -63,6 +63,30 @@
         </div>
         <!-- Add more papers as needed -->
       </div>
+      <h2>Awards and Fellowships</h2>
+        <ul>
+            <li>
+                <strong>Mrs. M.R. Iyer Memorial Gold Medal</strong> (At the 58th Convocation of Indian Statistical Institute, Kolkata) for outstanding performance in B.Stat program (2020-2023)
+            </li>
+            <li>
+                <strong>Nikhilesh Bhattacharya Memorial Gold Medal</strong> (At the 58th Convocation of Indian Statistical Institute, Kolkata) for best performance in Statistics in B.Stat program (2020-2023)
+            </li>
+            <li>
+                <strong>Usri Gangopadhyay Memorial Medal</strong> (At the 58th Convocation of Indian Statistical Institute, Kolkata) for best female student in B.Stat program (2020-2023)
+            </li>
+            <li>
+                <strong>Mukul Chaudhuri Cash Award</strong> (At the 56th and 57th Convocation of Indian Statistical Institute, Kolkata) in 1st and 2nd year of B.Stat program
+            </li>
+            <li>
+                <strong>Summer Research Fellowship</strong> by Indian National Science Academy (INSA): May 2022–July 2022
+            </li>
+            <li>
+                <strong>Kishore Vaigyanik Protsahan Yojana (KVPY) fellowship</strong>: 2020-Present
+            </li>
+            <li>
+                <strong>Indian National Mathematical Olympiad (INMO) Merit Award</strong> by the Homi Bhabha Centre for Science Education (HBCSE), Tata Institute of Fundamental Research (TIFR) - 2019
+            </li>
+        </ul>
     </section>
   </body>
 </html>
