--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </p>
         </div>
         <div class="image">
-          <img src="image.png" alt="profile" />
+          <img src="image.png" alt="profile" width="100" height="100"/>
         </div>
       </div>
       <div class="papers">
