--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
           </h1>
           <p class="description">
             I am a final year student of the Master of Statistics (M.Stat) program at
-             the Indian Statistical Institute (ISI), Kolkata. My Master's dissertation
-              is being advised by Professor Aaditya Ramdas and Professor Soumendu Sundar Mukherjee.
+             the <a href="https://www.isical.ac.in/" target="_blank">Indian Statistical Institute (ISI)</a>, Kolkata. My Master's dissertation
+              is being advised by Professor <a href="https://www.stat.cmu.edu/~aramdas/" target="_blank">Aaditya Ramdas</a> and Professor <a href="https://soumendu041.gitlab.io/" target="_blank">Soumendu Sundar Mukherjee</a>.
                During the summer of 2024, I was a Visiting Research Scholar in the Department of Statistics 
                and Data Science at Carnegie Mellon University, where I was mentored by Professor 
-               Aaditya Ramdas. I completed my Bachelor of Statistics (B.Stat) from ISI Kolkata in 2023.
+               <a href="https://www.stat.cmu.edu/~aramdas/" target="_blank">Aaditya Ramdas</a>. I completed my Bachelor of Statistics (B.Stat) from <a href="https://www.isical.ac.in/" target="_blank">ISI Kolkata</a> in 2023.
             I am broadly interested in statistics and machine learning.
           </p>
         </div>
@@ -48,22 +48,22 @@
         </div>
       </div>
       <div class="papers">
-        <h2>List of Papers</h2>
+        <h1>List of Papers</h1>
         <div class="paper">
-          <h3>Title: Paper Title 1</h3>
-          <p>Authors: Author 1, Author 2, Aytijhya Saha</p>
-          <p>Journal: Journal Name, Year: 2024</p>
-          <p>Links: <a href="https://arxiv.org/abs/example1" target="_blank">arXiv</a></p>
+          <h3>Testing exchangeability by pairwise betting</h3>
+          <p>Authors: Aytijhya Saha and Aaditya Ramdas</p>
+          <p>International Conference on Artificial Intelligence and Statistics (AISTATS), 2024 - ORAL</p>
+          <p>Links: <a href="https://arxiv.org/abs/2310.14293" target="_blank">arXiv</a>|<a href="https://proceedings.mlr.press/v238/saha24b.html" target="_blank">Proceedings</a>|<a href="https://virtual.aistats.org/media/PosterPDFs/AISTATS%202024/6858.png?t=1713117601.2058222" target="_blank">Poster</a></p>
         </div>
         <div class="paper">
-          <h3>Title: Paper Title 2</h3>
-          <p>Authors: Author 1, Author 2, Aytijhya Saha</p>
-          <p>Journal: Journal Name, Year: 2023</p>
-          <p>Links: <a href="https://arxiv.org/abs/example2" target="_blank">arXiv</a></p>
+          <h3>Robust Classification of High-Dimensional Data Using Data-Adaptive Energy Distance</h3>
+          <p>Jyotishka Ray Choudhury*, Aytijhya Saha*, Sarbojit Roy & Subhajit Dutta (* denotes equal contributions)</p>
+          <p>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2023</p>
+          <p>Links: <a href="https://arxiv.org/abs/2306.13985" target="_blank">arXiv</a>|<a href="https://link.springer.com/chapter/10.1007/978-3-031-43424-2_6" target="_blank">Springer</a>|<a href="https://github.com/jyotishkarc/sub-834-ecml-2023" target="_blank">Code</a></p>
         </div>
         <!-- Add more papers as needed -->
-      </div>
-      <h2>Awards and Fellowships</h2>
+      </div class="paper">
+      <h1>Awards and Fellowships</h1>
         <ul>
             <li>
                 <strong>Mrs. M.R. Iyer Memorial Gold Medal</strong> (At the 58th Convocation of Indian Statistical Institute, Kolkata) for outstanding performance in B.Stat program (2020-2023)
