--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+        h1 {text-align: center;}
+        p {text-align: justify;}
+        div {text-align: left;}
+        </style>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -49,50 +54,80 @@
       </div>
       <div class="papers">
         <h1>List of Papers</h1>
-        <div class="paper">
-          <h3>Testing exchangeability by pairwise betting</h3>
-          <p>Authors: Aytijhya Saha and Aaditya Ramdas</p>
-          <p>International Conference on Artificial Intelligence and Statistics (AISTATS), 2024 - ORAL</p>
-          <p>Links: <a href="https://arxiv.org/abs/2310.14293" target="_blank">arXiv</a>|<a href="https://proceedings.mlr.press/v238/saha24b.html" target="_blank">Proceedings</a>|<a href="https://virtual.aistats.org/media/PosterPDFs/AISTATS%202024/6858.png?t=1713117601.2058222" target="_blank">Poster</a></p>
-        </div>
-        <div class="paper">
-          <h3>Robust Classification of High-Dimensional Data Using Data-Adaptive Energy Distance</h3>
-          <p>Jyotishka Ray Choudhury*, Aytijhya Saha*, Sarbojit Roy & Subhajit Dutta (* denotes equal contributions)</p>
-          <p>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2023</p>
-          <p>Links: <a href="https://arxiv.org/abs/2306.13985" target="_blank">arXiv</a>|<a href="https://link.springer.com/chapter/10.1007/978-3-031-43424-2_6" target="_blank">Springer</a>|<a href="https://github.com/jyotishkarc/sub-834-ecml-2023" target="_blank">Code</a></p>
-        </div>
+        <ol>
+            <li>
+            <div class="paper">
+            <p>Testing exchangeability by pairwise betting</p>
+            <p>Aytijhya Saha and Aaditya Ramdas</p>
+            <p>International Conference on Artificial Intelligence and Statistics (AISTATS), 2024 - <font color="red">ORAL</font></p>
+            <p>Links: <a href="https://arxiv.org/abs/2310.14293" target="_blank">arXiv</a> | <a href="https://proceedings.mlr.press/v238/saha24b.html" target="_blank">Proceedings</a> | <a href="https://virtual.aistats.org/media/PosterPDFs/AISTATS%202024/6858.png?t=1713117601.2058222" target="_blank">Poster</a></p>
+            </div>
+            </li>
+            <li>
+            <div class="paper">
+            <p>Robust Classification of High-Dimensional Data Using Data-Adaptive Energy Distance</p>
+            <p>Jyotishka Ray Choudhury*, Aytijhya Saha*, Sarbojit Roy & Subhajit Dutta (* denotes equal contributions)</p>
+            <p>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2023</p>
+            <p>Links: <a href="https://arxiv.org/abs/2306.13985" target="_blank">arXiv</a> | <a href="https://link.springer.com/chapter/10.1007/978-3-031-43424-2_6" target="_blank">Springer</a> | <a href="https://github.com/jyotishkarc/sub-834-ecml-2023" target="_blank">Code</a></p>
+            </div>
+            </li>
+        </ol>
+      </div>
+      <div class="papers">
+        <h1>Awards and Fellowships</h1>
+        <ol>
+            <li>
+            <div class="paper">
+            <p><strong>Mrs. M.R. Iyer Memorial Gold Medal</strong> (At the 58th Convocation of Indian Statistical Institute, Kolkata)</p>
+            <p>for outstanding performance in B.Stat program (2020-2023)</p>
+            </div>
+            </li>
+            <li>
+            <div class="paper">
+            <p><strong>Nikhilesh Bhattacharya Memorial Gold Medal</strong> (At the 58th Convocation of Indian Statistical Institute, Kolkata)</p>
+            <p>for best performance in Statistics in B.Stat program (2020-2023)</p>
+            </div>
+            </li>
+            <li>
+            <div class="paper">
+            <p><strong>Usri Gangopadhyay Memorial Medal</strong> (At the 58th Convocation of Indian Statistical Institute, Kolkata)</p>
+            <p>as the best female student in B.Stat program (2020-2023)</p>
+            </div>
+            </li>
+            <li>
+            <div class="paper">
+            <p><strong>Mukul Chaudhuri Cash Award</strong> (At the 56th and 57th Convocation of Indian Statistical Institute, Kolkata)</p>
+            <p>in 1st and 2nd year of B.Stat program</p>
+            </div>
+            </li>
+
+            <li>
+            <div class="paper">
+            <p><strong>Summer Research Fellowship</strong> by Indian National Science Academy (INSA): May 2022–July 2022</p>
+            </div>
+            </li>
+
+            <li>
+            <div class="paper">
+            <p><strong>Kishore Vaigyanik Protsahan Yojana (KVPY) fellowship</strong>: 2020-Present</p>
+            </div>
+            </li>
+
+            <li>
+            <div class="paper">
+            <p><strong>Indian National Mathematical Olympiad (INMO) Merit Award</strong> by the Homi Bhabha Centre for Science Education (HBCSE), Tata Institute of Fundamental Research (TIFR) - 2019</p>
+            </div>
+            </li>
+
+            <li>
+            <div class="paper">
+            <p><strong>Summer Research Fellowship</strong> by Indian National Science Academy (INSA): May 2022–July 2022</p>
+            </div>
+            </li>
+        </ol>
+      </div>
         <!-- Add more papers as needed -->
-      </div class="paper">
-      <h1>Awards and Fellowships</h1>
-        <ul>
-            <li>
-                <strong>Mrs. M.R. Iyer Memorial Gold Medal</strong> (At the 58th Convocation of Indian Statistical Institute, Kolkata) for outstanding performance in B.Stat program (2020-2023)
-            </li>
-            <br> 
-            <li>
-                <strong>Nikhilesh Bhattacharya Memorial Gold Medal</strong> (At the 58th Convocation of Indian Statistical Institute, Kolkata) for best performance in Statistics in B.Stat program (2020-2023)
-            </li>
-            <br> 
-            <li>
-                <strong>Usri Gangopadhyay Memorial Medal</strong> (At the 58th Convocation of Indian Statistical Institute, Kolkata) for best female student in B.Stat program (2020-2023)
-            </li>
-            <br> 
-            <li>
-                <strong>Mukul Chaudhuri Cash Award</strong> (At the 56th and 57th Convocation of Indian Statistical Institute, Kolkata) in 1st and 2nd year of B.Stat program
-            </li>
-            <br> 
-            <li>
-                <strong>Summer Research Fellowship</strong> by Indian National Science Academy (INSA): May 2022–July 2022
-            </li>
-            <br> 
-            <li>
-                <strong>Kishore Vaigyanik Protsahan Yojana (KVPY) fellowship</strong>: 2020-Present
-            </li>
-            <br> 
-            <li>
-                <strong>Indian National Mathematical Olympiad (INMO) Merit Award</strong> by the Homi Bhabha Centre for Science Education (HBCSE), Tata Institute of Fundamental Research (TIFR) - 2019
-            </li>
-        </ul>
+      
     </section>
   </body>
 </html>
