--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         </div>
       </div>
       <div class="papers">
-        <h1>List of Papers</h1>
+        <h1>Published (or accepted) papers</h1>
         <ol>
             <li>
             <div class="paper">
-            <p>Testing exchangeability by pairwise betting</p>
+            <p><strong>Testing exchangeability by pairwise betting</strong></p>
             <p>Aytijhya Saha and Aaditya Ramdas</p>
             <p>International Conference on Artificial Intelligence and Statistics (AISTATS), 2024 - <font color="red">ORAL</font></p>
             <p>Links: <a href="https://arxiv.org/abs/2310.14293" target="_blank">arXiv</a> | <a href="https://proceedings.mlr.press/v238/saha24b.html" target="_blank">Proceedings</a> | <a href="https://virtual.aistats.org/media/PosterPDFs/AISTATS%202024/6858.png?t=1713117601.2058222" target="_blank">Poster</a></p>
@@ -65,10 +65,36 @@
             </li>
             <li>
             <div class="paper">
-            <p>Robust Classification of High-Dimensional Data Using Data-Adaptive Energy Distance</p>
+            <p><strong>Robust Classification of High-Dimensional Data Using Data-Adaptive Energy Distance</strong></p>
             <p>Jyotishka Ray Choudhury*, Aytijhya Saha*, Sarbojit Roy & Subhajit Dutta (* denotes equal contributions)</p>
             <p>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2023</p>
             <p>Links: <a href="https://arxiv.org/abs/2306.13985" target="_blank">arXiv</a> | <a href="https://link.springer.com/chapter/10.1007/978-3-031-43424-2_6" target="_blank">Springer</a> | <a href="https://github.com/jyotishkarc/sub-834-ecml-2023" target="_blank">Code</a></p>
+            </div>
+            </li>
+        </ol>
+      </div>
+      <div class="papers">
+        <h1>Preprints/ Working papers/ Miscellaneous articles</h1>
+        <ol>
+            <li>
+            <div class="paper">
+            <p><strong>Saha and Ramdas' discussion of "Poisson-focus" by Ward, Dilillo, Eckley and Fearnhead</strong></p>
+            <p>Aytijhya Saha and Aaditya Ramdas</p>
+            <p>Submitted at Journal of the American Statistical Association (JASA)</p>
+            </div>
+            </li>
+            <li>
+            <div class="paper">
+            <p><strong>Group-Feature (Sensor) Selection With Controlled Redundancy Using Neural Networks</strong></p>
+            <p>Aytijhya Saha and Nikhil R Pal</p>
+            <p>Submitted at Neurocomputing - <a href="https://arxiv.org/abs/2310.20524" target="_blank">arXiv</a></p>
+            </div>
+            </li>
+            <li>
+            <div class="paper">
+            <p><strong>Huber-Robust Anytime-Valid Sequential Probability Ratio Test</strong></p>
+            <p>Aytijhya Saha and Aaditya Ramdas</p>
+            <p>Working Paper</p>
             </div>
             </li>
         </ol>
@@ -119,11 +145,7 @@
             </div>
             </li>
 
-            <li>
-            <div class="paper">
-            <p><strong>Summer Research Fellowship</strong> by Indian National Science Academy (INSA): May 2022–July 2022</p>
-            </div>
-            </li>
+            
         </ol>
       </div>
         <!-- Add more papers as needed -->
