--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                <a href="https://www.stat.cmu.edu/~aramdas/" target="_blank">Aaditya Ramdas</a>. 
 
                During the summer of 2023, I worked in the Machine Learning cohort at the <a href="https://sph.umich.edu/bdsi/" target="_blank">Big Data Summer Institute</a>,
-               School of Public Health, University of Michigan, Ann Arbor.
+               School of Public Health, University of Michigan.
                
                
                I earned my Bachelor of Statistics (B.Stat) from <a href="https://www.isical.ac.in/" target="_blank">ISI Kolkata</a> in 2023.
