--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
           <img src="image.png" alt="profile" />
         </div>
       </div>
+
+      <div id="cv">
+        <div class="papers">
+        <div class="paper">
+        <a href="CV___Aytijhya.pdf" target="_blank" class="cv-link"><h2>Curriculum Vitae</h2></a>
+      </div>
+      </div>
+     </div>
       <div class="papers">
         <h1>Published (or accepted) papers</h1>
         <ol>
