--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 <img src="scholar-icon.png" alt="Google Scholar" class="nav-icon"> Google Scholar</a></li>
             <li><a href="https://github.com/Aytijhya" target="_blank">
                 <img src="github-icon.png" alt="GitHub" class="nav-icon"> GitHub</a></li>
+            <li><a href="CV___Aytijhya.pdf" target="_blank" class="cv-link" >
+                <img src="cv-icon.png" alt="Curriculum Vitae" class="nav-icon"> Curriculum Vitae</a></li>
+        
         </ul>
     </nav>
     <div id="home" class="tab">
@@ -58,13 +61,7 @@
         </div>
       </div>
 
-      <div id="cv">
-        <div class="papers">
-        <div class="paper">
-        <a href="CV___Aytijhya.pdf" target="_blank" class="cv-link"><h2>Curriculum Vitae</h2></a>
-      </div>
-      </div>
-     </div>
+      
       <div class="papers">
         <h1>Published (or accepted) papers</h1>
         <ol>
