--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <body>
     <nav>
         <ul class="nav-links" id="nav-links">
+            <li><a href="CV___Aytijhya.pdf" target="_blank" >
+                <img src="cv-icon.png" alt="Curriculum Vitae" class="nav-icon"> Curriculum Vitae</a></li>
             <li><a href="https://scholar.google.com/citations?user=fKv7P-wAAAAJ&hl=en" target="_blank">
                 <img src="scholar-icon.png" alt="Google Scholar" class="nav-icon"> Google Scholar</a></li>
             <li><a href="https://github.com/Aytijhya" target="_blank">
                 <img src="github-icon.png" alt="GitHub" class="nav-icon"> GitHub</a></li>
-            <li><a href="CV___Aytijhya.pdf" target="_blank" class="cv-link" >
-                <img src="cv-icon.png" alt="Curriculum Vitae" class="nav-icon"> Curriculum Vitae</a></li>
-        
+              
         </ul>
     </nav>
     <div id="home" class="tab">
