--- a/index.html
+++ b/index.html
@@ -115,18 +115,18 @@
         <ol>
             <li>
             <div class="paper">
-            <p><strong>Mrs. M.R. Iyer Memorial Gold Medal</strong> (At the 58th Convocation of <a href="https://www.isical.ac.in/" target="_blank">ISI Kolkata</a>) for outstanding performance in B.Stat program (2020-2023)</p>
+            <p><strong>Mrs. M.R. Iyer Memorial Gold Medal</strong> (At the 58th Convocation of <a href="https://www.isical.ac.in/" target="_blank">ISI Kolkata</a>) for outstanding performance in B.Stat program (2020-2023) at ISI</p>
             </div>
             </li>
             <li>
             <div class="paper">
-            <p><strong>Nikhilesh Bhattacharya Memorial Gold Medal</strong> (At the 58th Convocation of <a href="https://www.isical.ac.in/" target="_blank">ISI Kolkata</a>) for best performance in Statistics in B.Stat program (2020-2023)</p>
+            <p><strong>Nikhilesh Bhattacharya Memorial Gold Medal</strong> (At the 58th Convocation of <a href="https://www.isical.ac.in/" target="_blank">ISI Kolkata</a>) for best performance in Statistics in B.Stat program (2020-2023) at ISI</p>
             </div>
             </li>
            
             <li>
             <div class="paper">
-            <p><strong>Mukul Chaudhuri Cash Award</strong> (At the 56th and 57th Convocation of <a href="https://www.isical.ac.in/" target="_blank">ISI Kolkata</a>) in 1st and 2nd year of B.Stat program</p>
+            <p><strong>Mukul Chaudhuri Cash Award</strong> (At the 56th and 57th Convocation of <a href="https://www.isical.ac.in/" target="_blank">ISI Kolkata</a>) in 1st and 2nd year of B.Stat program at ISI - 2021,2022</p>
             </div>
             </li>
 
