--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
            
             <li>
             <div class="paper">
-            <p><strong>Mukul Chaudhuri Cash Award</strong> (At the 56th and 57th Convocation of <a href="https://www.isical.ac.in/" target="_blank">ISI Kolkata</a>) in 1st and 2nd year of B.Stat program at ISI - 2021,2022</p>
+            <p><strong>Mukul Chaudhuri Cash Award</strong> (At the 56th and 57th Convocation of <a href="https://www.isical.ac.in/" target="_blank">ISI Kolkata</a>) in 1st and 2nd year of B.Stat program at ISI - 2021, 2022</p>
             </div>
             </li>
 
