--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
             
             <div class="contact-item">
                 <img src="email-icon.png" alt="Email Icon">
-                <a href="mb2308@isical.ac.in">mb2308@isical.ac.in</a>
+                <a href="mailto:mb2308@isical.ac.in">mb2308@isical.ac.in</a>
             </div>
             <div class="contact-item">
                 <img src="linkedin-icon.png" alt="LinkedIn Icon">
-                <a href="www.linkedin.com/in/aytijhya" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/aytijhya" target="_blank">LinkedIn</a>
             </div>
         </div>
   </div>
