--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Aytijhya Saha</title>
+    <title> Aytijhya Saha</title>
   </head>
   <body>
     <nav>
+      <h1 class="title"><font color="white">Aytijhya Saha</font></h1>
         <ul class="nav-links" id="nav-links">
             <li><a href="CV___Aytijhya.pdf" target="_blank" >
                 <img src="cv-icon.png" alt="Curriculum Vitae" class="nav-icon"> Curriculum Vitae</a></li>
@@ -33,9 +34,9 @@
       <div class="section__container">
         <div class="content">
        
-          <h1 class="title">
-            Aytijhya Saha
-          </h1>
+          <h2 class="title">
+            About Me
+          </h2>
           <p class="description">
             I am a final year student of the Master of Statistics (M.Stat) program at
              the <a href="https://www.isical.ac.in/" target="_blank">Indian Statistical Institute (ISI)</a>, Kolkata. I am fortunate to be advised by
@@ -157,7 +158,7 @@
     </section>
   </div>
   <div id="contact">
-    <h1>Contact Me</h1>
+    <h2>Contact</h2>
     <div class="papers">
     <div class="paper">
         <p>If you'd like to get in touch, feel free to reach out via email or connect with me on LinkedIn.</p>
@@ -176,5 +177,8 @@
   </div>
   </div>
   <script src="scripts.js"></script>
+  <footer>
+    <p>&copy; 2024 Aytijhya Saha. All rights reserved.</p>
+  </footer>
   </body>
 </html>
