--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </section>
   </div>
   <div id="contact">
-    <h2>Contact</h2>
+    <h1>Contact</h1>
     <div class="papers">
     <div class="paper">
         <p>If you'd like to get in touch, feel free to reach out via email or connect with me on LinkedIn.</p>
@@ -178,7 +178,7 @@
   </div>
   <script src="scripts.js"></script>
   <footer>
-    <p>&copy; 2024 Aytijhya Saha. All rights reserved.</p>
+    <p><center>&copy; 2024 Aytijhya Saha</center></p>
   </footer>
   </body>
 </html>
