--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             
             <div class="contact-item">
                 <img src="email-icon.png" alt="Email Icon">
-                mb2308 AT isical DOT ac FULLSTOP in
+                mb2308 [at] isical [dot] ac [fullstop] in
             </div>
             <div class="contact-item">
                 <img src="linkedin-icon.png" alt="LinkedIn Icon">
