--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="paper">
             <p><strong>Saha and Ramdas' discussion of "Poisson-focus" by Ward, Dilillo, Eckley and Fearnhead</strong></p>
             <p>Aytijhya Saha and Aaditya Ramdas</p>
-            <p>Accepted to appear at the Journal of the American Statistical Association (JASA) - 2024</p>
+            <p>Journal of the American Statistical Association (JASA), 2024</p>
             <p>Links: <a href="https://doi.org/10.1080/01621459.2024.2402957" target="_blank">Journal</a> | <a href="https://github.com/Aytijhya/Discussion-of-Poisson-FOCuS-GRB-Detection" target="_blank">Code</a></p>
             </div>
             </li>
@@ -79,7 +79,7 @@
             <div class="paper">
             <p><strong>Group-Feature (Sensor) Selection With Controlled Redundancy Using Neural Networks</strong></p>
             <p>Aytijhya Saha and Nikhil R Pal</p>
-            <p>Published at Neurocomputing, 2024</p>
+            <p>Neurocomputing, 2024</p>
             <p>Links: <a href="https://arxiv.org/abs/2310.20524" target="_blank">arXiv</a> | <a href="https://doi.org/10.1016/j.neucom.2024.128596" target="_blank">Journal</a></p>
             </div>
             </li>
