--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       
       <div class="papers">
-        <h1>Published (or accepted) papers</h1>
+        <h1>Published (or accepted) papers/articles</h1>
         <ol>
         <h2>Published at Journals</h2>
           <li>
