--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </ol>
       </div>
       <div class="papers">
-        <h1>Awards and Fellowships</h1>
+        <h1>Selected Awards and Fellowships</h1>
         <div>
         <ol>
             <li>
