--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav>
       <h1 class="title"><font color="white">Aytijhya Saha</font></h1>
         <ul class="nav-links" id="nav-links">
-            <li><a href="CV___Aytijhya.pdf" target="_blank" >
+            <li><a href="CV_Aytijhya.pdf" target="_blank" >
                 <img src="cv-icon.png" alt="Curriculum Vitae" class="nav-icon"> Curriculum Vitae</a></li>
             <li><a href="https://scholar.google.com/citations?user=fKv7P-wAAAAJ&hl=en" target="_blank">
                 <img src="scholar-icon.png" alt="Google Scholar" class="nav-icon"> Google Scholar</a></li>
