--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     />
     <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="styles.css" />
-    <title> Aytijhya Saha</title>
+    <title> Aytijhya Saha's Webpage</title>
   </head>
   <body>
     <nav>
       <h1 class="title"><font color="white">Aytijhya Saha</font></h1>
         <ul class="nav-links" id="nav-links">
-            <li><a href="" >
-                Home</a></li>
+            <!--<li><a href="" >
+                Home</a></li>-->
             <li><a href="CV_Aytijhya.pdf" target="_blank" >
                 <img src="cv-icon.png" alt="Curriculum Vitae" class="nav-icon">Curriculum Vitae</a></li>
             <li><a href="https://scholar.google.com/citations?user=fKv7P-wAAAAJ&hl=en" target="_blank">
