--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
           <p class="description">
             I am a final year student of the Master of Statistics (M.Stat) program at
              the <a href="https://www.isical.ac.in/" target="_blank">Indian Statistical Institute (ISI)</a>, Kolkata. I am fortunate to be advised by
-              Professor <a href="https://www.stat.cmu.edu/~aramdas/" target="_blank">Aaditya Ramdas</a> and Professor <a href="https://soumendu041.gitlab.io/" target="_blank">Soumendu Sundar Mukherjee</a> on my master's dissertation.
+              <a href="https://www.stat.cmu.edu/~aramdas/" target="_blank">Aaditya Ramdas</a> and <a href="https://soumendu041.gitlab.io/" target="_blank">Soumendu Sundar Mukherjee</a> on my master's dissertation.
               
                During the summer of 2024, I was a Visiting Research Scholar in the <a href="https://www.cmu.edu/dietrich/statistics-datascience/index.html"target="_blank">Department of Statistics 
-               and Data Science</a> at Carnegie Mellon University, where I was mentored by Professor 
+               and Data Science</a> at Carnegie Mellon University, where I was mentored by 
                <a href="https://www.stat.cmu.edu/~aramdas/" target="_blank">Aaditya Ramdas</a>. 
 
                During the summer of 2023, I worked in the Machine Learning cohort at the <a href="https://sph.umich.edu/bdsi/" target="_blank">Big Data Summer Institute</a>,
