--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
             <div class="paper">
             <p><strong>Robust likelihood ratio tests for composite nulls and alternatives</strong></p>
             <p>Aytijhya Saha and Aaditya Ramdas</p>
-            <p>Preprint - <a href="https://arxiv.org/abs/2408.14015" target="_blank">arXiv</a></p>
+            <p>Submitted to the IEEE Transactions on Information Theory</p>
+            <p>Link:  <a href="https://arxiv.org/abs/2408.14015" target="_blank">arXiv</a></p>
             </div>
             </li>
            
