--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <ul class="nav-links" id="nav-links">
             <!--<li><a href="" >
                 Home</a></li>-->
-            <li><a href="CV_Aytijhya.pdf" target="_blank" >
-                <img src="cv-icon.png" alt="Curriculum Vitae" class="nav-icon">Curriculum Vitae</a></li>
+            <!--<li><a href="CV_Aytijhya.pdf" target="_blank" >
+                <img src="cv-icon.png" alt="Curriculum Vitae" class="nav-icon">Curriculum Vitae</a></li>-->
             <li><a href="https://scholar.google.com/citations?user=fKv7P-wAAAAJ&hl=en" target="_blank">
                 <img src="scholar-icon.png" alt="Google Scholar" class="nav-icon">Google Scholar</a></li>
             <li><a href="https://github.com/Aytijhya" target="_blank">
@@ -166,6 +166,9 @@
       
     </section>
   </div>
+
+
+  
   <div id="contact">
     <h1>Contact</h1>
     <div class="papers">
