--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                <a href="https://www.stat.cmu.edu/~aramdas/" target="_blank">Aaditya Ramdas</a>. 
 
                Prior to that, in the summer of 2023, I worked in the Machine Learning cohort at the <a href="https://sph.umich.edu/bdsi/" target="_blank">Big Data Summer Institute</a>,
-               School of Public Health, University of Michigan, supervised by <a href="https://sph.umich.edu/faculty-profiles/ladhania-rahul.html">Rahul Ladhania</a>.
+               School of Public Health, University of Michigan.
                
                
                I earned my Bachelor of Statistics (B.Stat) degree from <a href="https://www.isical.ac.in/" target="_blank">ISI Kolkata</a> in 2023.
