--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="paper">
             <p><strong>Saha and Ramdas' discussion of "Poisson-focus" by Ward, Dilillo, Eckley and Fearnhead</strong></p>
             <p>Aytijhya Saha and Aaditya Ramdas</p>
-            <p><i>Journal of the American Statistical Association (JASA), 2024</i></p>
+            <p><i>Journal of the American Statistical Association (JASA), 2024 (To Appear)</i></p>
             <p>Links: <a href="https://doi.org/10.1080/01621459.2024.2402957" target="_blank">Journal</a> | <a href="https://github.com/Aytijhya/Discussion-of-Poisson-FOCuS-GRB-Detection" target="_blank">Code</a></p>
             </div>
             </li>
