--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="paper">
             <p><strong>Group-Feature (Sensor) Selection With Controlled Redundancy Using Neural Networks</strong></p>
             <p>Aytijhya Saha and Nikhil R Pal</p>
-            <p><i>Neurocomputing, 2024</i></p>
+            <p><i><font color="rgb(0.2, 0.28, 0.87)">Neurocomputing</font>, 2024</i></p>
             <p>Links: <a href="https://arxiv.org/abs/2310.20524" target="_blank">arXiv</a> | <a href="https://doi.org/10.1016/j.neucom.2024.128596" target="_blank">Journal</a></p>
             </div>
             </li>
@@ -85,7 +85,7 @@
             <div class="paper">
             <p><strong>Saha and Ramdas' discussion of "Poisson-focus" by Ward, Dilillo, Eckley and Fearnhead</strong></p>
             <p>Aytijhya Saha and Aaditya Ramdas</p>
-            <p><i>Journal of the American Statistical Association (JASA) (To Appear)</i></p>
+            <p><i><font color="rgb(0.2, 0.28, 0.87)">Journal of the American Statistical Association (JASA)</font>, 2025.To Appear</i></p>
             <p>Links: <a href="https://doi.org/10.1080/01621459.2024.2402957" target="_blank">Journal</a> | <a href="https://github.com/Aytijhya/Discussion-of-Poisson-FOCuS-GRB-Detection" target="_blank">Code</a></p>
             </div>
             </li>
@@ -97,7 +97,7 @@
             <div class="paper">
             <p><strong>Testing exchangeability by pairwise betting</strong></p>
             <p>Aytijhya Saha and Aaditya Ramdas</p>
-            <p><i>International Conference on Artificial Intelligence and Statistics (AISTATS), 2024 </i>- <font color="red">ORAL</font></p>
+            <p><i><font color="rgb(0.2, 0.28, 0.87)">International Conference on Artificial Intelligence and Statistics (AISTATS</font>), 2024 </i>. <font color="red"><b>ORAL</b></font></p>
             <p>Links: <a href="https://arxiv.org/abs/2310.14293" target="_blank">arXiv</a> | <a href="https://proceedings.mlr.press/v238/saha24b.html" target="_blank">Proceedings</a> | <a href="https://virtual.aistats.org/media/PosterPDFs/AISTATS%202024/6858.png?t=1713117601.2058222" target="_blank">Poster</a></p>
             </div>
             </li>
@@ -105,7 +105,7 @@
             <div class="paper">
             <p><strong>Robust Classification of High-Dimensional Data Using Data-Adaptive Energy Distance</strong></p>
             <p>Jyotishka Ray Choudhury*, Aytijhya Saha*, Sarbojit Roy & Subhajit Dutta (* denotes equal contributions)</p>
-            <p><i>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2023</i></p>
+            <p><i><font color="rgb(0.2, 0.28, 0.87)">European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD)</font>, 2023</i></p>
             <p>Links: <a href="https://arxiv.org/abs/2306.13985" target="_blank">arXiv</a> | <a href="https://link.springer.com/chapter/10.1007/978-3-031-43424-2_6" target="_blank">Springer</a> | <a href="https://github.com/jyotishkarc/sub-834-ecml-2023" target="_blank">Code</a></p>
             </div>
             </li>
@@ -120,8 +120,8 @@
             <div class="paper">
             <p><strong>Robust likelihood ratio tests for composite nulls and alternatives</strong></p>
             <p>Aytijhya Saha and Aaditya Ramdas</p>
-            <p>Submitted to the <i>IEEE Transactions on Information Theory</i></p>
-            <p>Link:  <a href="https://arxiv.org/abs/2408.14015" target="_blank">arXiv</a></p>
+            <p>Submitted to the <font color="rgb(0.2, 0.28, 0.87)"><i>IEEE Transactions on Information Theory</i></font></p>
+            <p>Link: <a href="https://arxiv.org/abs/2408.14015" target="_blank">arXiv</a></p>
             </div>
             </li>
            
