--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     <nav>
       <h1 class="title"><font color="white">Aytijhya Saha</font></h1>
         <ul class="nav-links" id="nav-links">
-            <!--<li><a href="" >
-                Home</a></li>-->
+            <li><a href="" >
+                Home</a></li>
+            <li><a href="research.html" >
+                  Research</a></li>
             <!--<li><a href="CV_Aytijhya.pdf" target="_blank" >
                 <img src="cv-icon.png" alt="Curriculum Vitae" class="nav-icon">Curriculum Vitae</a></li>-->
             <li><a href="https://scholar.google.com/citations?user=fKv7P-wAAAAJ&hl=en" target="_blank">
@@ -130,7 +132,7 @@
       <div class="papers">
         <h1>Selected Awards and Fellowships</h1>
         <div>
-        <ol>
+        <ul>
             <li>
             <div class="paper">
             <p><strong>Mrs. M.R. Iyer Memorial Gold Medal</strong> (At the 58th Convocation of <a href="https://www.isical.ac.in/" target="_blank">ISI</a>) for the <strong> first position </strong> in the B.Stat program (2020-2023) at ISI</p>
@@ -161,7 +163,7 @@
             </li>
 
             
-        </ol>
+        </ul>
         </div>
       </div>
       
