--- a/research.html
+++ b/research.html
@@ -38,10 +38,9 @@
         <div class="content">
           <p class="description">My research interests span a broad spectrum within algorithms, theory, and applications of Statistics and Machine Learning. 
             I have worked on areas including robust statistics, online/sequential learning, game-theoretic statistics,
-            high-dimensional inference, change-point detection and localization, causal inference,
+            high-dimensional inference, change-point detection and localization, group-feature selection,
         conformal prediction,
-        classification, 
-        clustering algorithms, 
+        classification algorithms, 
         multi-armed bandits,
         neural networks. My research work appears (or under review) in the top proceedings in ML/AI (AISTATS, ECML-PKDD) and the top journals in ML and statistics and related areas (Neurocomputing, JASA, IEEE). 
         Details of my publications and preprints can be found in my <a href="index.html">homepage</a> and <a href="https://scholar.google.com/citations?user=fKv7P-wAAAAJ&hl=en" target="_blank">
@@ -108,7 +107,7 @@
               </li>
               <li>
                 <div class="paper">
-                <h3><strong>Robust likelihood ratio tests for composite nulls and alternatives</strong> [Under Review, IEEE T - IT]</h3>
+                <h3><strong>Robust likelihood ratio tests for composite nulls and alternatives</strong> [Under Review, IEEE Trans. on Information Theory]</h3>
                 <p><strong>Brief description:</strong> We first modify Huber's robust SPRT for simple nulls and alternatives to instead employ a test supermartingale. 
                    The martingale tools allow us to generalize the usual Huber contamination model to show that our sequential test retains type-I error validity even under sequentially adaptive contaminations under the null. 
                     With this building block in place, we extend our approach to handle both composite nulls and composite alternative hypotheses, a task which has not been undertaken earlier, and utilizes te idea of reverse information projection. 
