--- a/research.html
+++ b/research.html
@@ -36,7 +36,7 @@
     <section class="section">
       <div class="section__description">
         <div class="content">
-          <p class="description">My research interests span a broad spectrum within algorithms, theory, and applications of Statistics and Machine Learning. 
+          <p class="description">My research interests span a broad spectrum within theory, methodology, and applications of Statistics and Machine Learning. 
             I have worked on areas including robust statistics, online/sequential learning, game-theoretic statistics,
             high-dimensional inference, change-point detection and localization, group-feature selection,
         classification algorithms, 
